--- a/assets/css/main/page5.css
+++ b/assets/css/main/page5.css
@@ -25,13 +25,20 @@
 }
 
 .page5 .content h1 {
-  font-weight: 400;
-  letter-spacing: 2px;
+  font-weight: 600;
+  letter-spacing: 3px;
+  margin: 40px 0;
+}
+
+.page5 .content h1 br{
+  display: none;
 }
 
 .page5 .content h2 {
   text-align: center;
   font-size: 20px;
+  font-weight: 600;
+  line-height: 1.75;
 }
 
 .page5 .calltoaction {
@@ -40,7 +47,29 @@
 
 @media screen and (max-width: 992px) {
   .page5 {
-    height: 100%;
+    height: 110%;
     background-attachment: scroll;
+  }
+  .page5 .content img {
+    width: 70px;
+    margin-top: 50px;
+  }
+  .page5 .content h1 {
+    font-size: 28px;
+    line-height: 1.5;
+  }
+  .page5 .content h1 br {
+    display: block;
+  }
+  .page5 .content h2 {
+    font-size: 15px;
+    line-height: 1.5;
+  }
+  .page5 .content h2 br {
+    display: none;
+  }
+  .page5 .calltoaction {
+    margin: 50px auto;
+    color: #fff;
   }
 }
